# reward-pool

./: .gitignore  create-farm.sh
.github/workflows/: ci_rs_main_on_push.yml
cli/farming-cli/: Cargo.toml
cli/farming-cli/src/: args.rs  main.rs  utils.rs
programs/farming/: Cargo.toml
programs/farming/src/: lib.rs  pool.rs
ts-client/: README.md  package.json  pnpm-lock.yaml
ts-client/src/: constant.ts  farm.ts  types.ts
ts-client/src/idl/: farming-idl.ts
ts-client/src/tests/: farm.test.ts
